--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CS/style.css">
-    <link rel="stylesheet" href="../INDEX/index1.html">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index1.html">
 
     <title>Mental Wellbeing</title>
 </head>
