--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <nav class="navbar">
 
         <div class="logo">
-            <img src="../img/brain3.png" alt="Brain exercise logo">
+            <img src="brain3.png" alt="Brain exercise logo">
         </div>
         <ul class="nav-list another">
-            <li><a href="../INDEX/index.html"><button>Home</button></a></li>
+            <li><a href="index.html"><button>Home</button></a></li>
             <li><a href="#Overview"><button>Overview</button></a></li>
             <li><a href="#Importance of mental wellness"><button>Mental_Wellness</button></a></li>
             <li><a href="#Diet"><button>Nutrition_Advice</button></a></li>
             <li><a href="#Boost mental health"><button>Boost_Mental_Health</button></a></li>
-            <li><a href="../INDEX/sign-up.html"><button>Login</button></a></li>
+            <li><a href="sign-up.html"><button>Login</button></a></li>
         </ul>
     </nav>
 
@@ -66,12 +66,12 @@
                                 <br>
                             </div>
                         </div>
-                        <a href="../INDEX/illness.html"><button class="btn">Dive deeper into specific mental
+                        <a href="illness.html"><button class="btn">Dive deeper into specific mental
                                 illnesses?</button></a>
 
                     </div>
                     <div class="secondhalf">
-                        <img src="../img/file (1).png" alt="relax_img" height="250px" width="250px">
+                        <img src="file (1).png" alt="relax_img" height="250px" width="250px">
                     </div>
                 </div>
             </section>
@@ -85,10 +85,10 @@
                         <h2 class="text-small">"Discover the importance of mental wellness and find ways to improve your
                             mental health"</h2>
                         <br>
-                        <a href="../INDEX/project.html"><button class="btn">Want to know more?</button></a>
+                        <a href="project.html"><button class="btn">Want to know more?</button></a>
                     </div>
                     <div class="secondhalf">
-                        <img src="../img/file (2).png" alt="relax_img" height="250px" width="250px">
+                        <img src="file (2).png" alt="relax_img" height="250px" width="250px">
                     </div>
                 </div>
             </section>
@@ -123,11 +123,11 @@
 
                         </div>
                         <div class="buttons">
-                            <button class="btn"><a href="../INDEX/medgame.html" target="_blank">Learn More</a></button>
+                            <button class="btn"><a href="INDEX/medgame.html" target="_blank">Learn More</a></button>
                         </div>
                     </div>
                     <div class="secondhalf">
-                        <img src="../img/secondSec.jpg" alt="relax_img" height="450px" width="450px">
+                        <img src="secondSec.jpg" alt="relax_img" height="450px" width="450px">
                     </div>
                 </div>
             </section>
@@ -158,11 +158,11 @@
 
                         </div>
                         <div class="buttons">
-                            <button class="btn"><a href="../INDEX/diet.html" target="_blank">Lean more</a></button>
+                            <button class="btn"><a href="diet.html" target="_blank">Lean more</a></button>
                         </div>
                     </div>
                     <div class="secondhalf">
-                        <img src="../img/file.png" alt="medyoga" height="450px" width="450px">
+                        <img src="file.png" alt="medyoga" height="450px" width="450px">
                     </div>
                 </div>
             </section>
@@ -181,7 +181,7 @@
                                 <p class="description">"Feeling frustrated? Take a break and play a fun game of
                                     Tic-Tac-Toe with a friend on our website to relieve your stress!"</p>
                                 <div class="buttons">
-                                    <br><button class="btn"><a href="../INDEX/index2.html"
+                                    <br><button class="btn"><a href="index2.html"
                                             >Tic-tac-toe</a></button>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                                     of quotes</p>
                                 <br>
                                 <div class="buttons">
-                                    <button class="btn"><a href="..//INDEX/motivation.html"
+                                    <button class="btn"><a href="motivation.html"
                                             >Motivation</a></button>
                                 </div>
                                 <br>
@@ -202,7 +202,7 @@
                                     well-being</p>
 
                                 <div class="buttons">
-                                    <br><button class="btn"><a href="../INDEX/index1.html"
+                                    <br><button class="btn"><a href="index1.html"
                                             
                                         >Countdown-timer</a></button>
                                 </div>
@@ -260,7 +260,7 @@
 
                     <h3 style="color: #ffd147;">Still have a questions?</h3>
                     <p style="color: ghostwhite;"><i>Signup for more details & get newsletters on health tips</i></p>
-                    <a href="../INDEX/sign-up.html" style="cursor: pointer;"><input type="submit" value="Signup"></a>
+                    <a href="sign-up.html" style="cursor: pointer;"><input type="submit" value="Signup"></a>
 
                 </div>
             </center>
@@ -272,7 +272,7 @@
             <div class="testimonials-container">
                 <div class="testimonial">
 
-                    <img src="../img/photo10.jpg" alt="User 1">
+                    <img src="photo10.jpg" alt="User 1">
                     <br>
                     <span class="star">⭐⭐⭐⭐⭐</span>
 
@@ -281,7 +281,7 @@
                     <span>CEO, Company</span>
                 </div>
                 <div class="testimonial">
-                    <img src="../img/female.png" alt="User 2">
+                    <img src="female.png" alt="User 2">
                     <br>
                     <span class="star">⭐⭐⭐⭐⭐</span>
 
@@ -291,7 +291,7 @@
                     <span>Designer, Studio</span>
                 </div>
                 <div class="testimonial">
-                    <img src="../img/female.png" alt="User 3">
+                    <img src="female.png" alt="User 3">
                     <br>
                     <span class="star">⭐⭐⭐⭐⭐</span>
 
@@ -301,7 +301,7 @@
                     <span>Developer, Tech Firm</span>
                 </div>
                 <div class="testimonial">
-                    <img src="../img/female.png" alt="User 4">
+                    <img src="female.png" alt="User 4">
                     <br>
 
                     <span class="star">⭐⭐⭐⭐⭐</span>
@@ -317,18 +317,18 @@
         <section class="connect-with-us">
             <h2>Connect with Us</h2>
             <div class="social-icons">
-                <a href="https://www.facebook.com"><img src="../img/fb-Photoroom.png" alt="Facebook"
+                <a href="https://www.facebook.com"><img src="fb-Photoroom.png" alt="Facebook"
                         class="social-icon"></a>
-                <a href="https://www.twitter.com"><img src="../img/X.png" alt="Twitter"
+                <a href="https://www.twitter.com"><img src="X.png" alt="Twitter"
                         class="social-icon"></a>
                 <a href="https://www.instagram.com"><img
-                        src="../img/instagram-logo-instagram-icon-transparent-free-png-Photoroom.png" alt="Instagram"
+                        src="instagram-logo-instagram-icon-transparent-free-png-Photoroom.png" alt="Instagram"
                         class="social-icon"></a>
                 <a href="https://www.linkedin.com"><img
-                        src="../img/linkedin-logo-on-transparent-isolated-background-free-vector-Photoroom.png"
+                        src="linkedin-logo-on-transparent-isolated-background-free-vector-Photoroom.png"
                         alt="LinkedIn" class="social-icon"></a>
                 <a href="https://www.youtube.com/"><img
-                        src="../img/youtube-icon-2048x2048-oa03jx3h-Photoroom.png" alt="Youtube"
+                        src="youtube-icon-2048x2048-oa03jx3h-Photoroom.png" alt="Youtube"
                         class="social-icon"></a>
             </div>
         </section>
